crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_is_null.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 344
expression: "format_with_errors(\"RETURN a IS NULL\")"
---
SOURCE_FILE@0..16
  STATEMENT@0..16
    RETURN_CLAUSE@0..16
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..16
        RETURN_ITEMS@6..16
          RETURN_ITEM@6..16
            IS_NULL_EXPR@6..16
              VAR_EXPR@6..8
                WHITESPACE@6..7 " "
                IDENT@7..8 "a"
              WHITESPACE@8..9 " "
              IS_KW@9..11 "IS"
              WHITESPACE@11..12 " "
              NULL_KW@12..16 "NULL"
