crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_list_literal_ints.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN [1, 2, 3]\")"
---
SOURCE_FILE@0..16
  STATEMENT@0..16
    RETURN_CLAUSE@0..16
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..16
        RETURN_ITEMS@6..16
          RETURN_ITEM@6..16
            LIST_LITERAL@6..16
              WHITESPACE@6..7 " "
              L_BRACK@7..8 "["
              LITERAL_EXPR@8..9
                INT_LITERAL@8..9 "1"
              COMMA@9..10 ","
              LITERAL_EXPR@10..12
                WHITESPACE@10..11 " "
                INT_LITERAL@11..12 "2"
              COMMA@12..13 ","
              LITERAL_EXPR@13..15
                WHITESPACE@13..14 " "
                INT_LITERAL@14..15 "3"
              R_BRACK@15..16 "]"
